# blue-tie

./: .gitignore  CMakeLists.txt  README.md  main.cpp
installer/: BlueTieInstaller.wixproj  CMakeLists.txt  data.tie  package.wxs
src/: CMakeLists.txt  main.cpp  single_instance_guard.cpp  single_instance_guard.h  tray_adapter.h  tray_icon.cpp  tray_icon.h
